--- a/FNSProject/templates/base.html
+++ b/FNSProject/templates/base.html
@@ -465,6 +465,7 @@ if(obj == "서울특별시") {
         margin-top: 8px;
         margin-left:5px;
       }
+      
       }
 
 .nav-link:hover{
@@ -797,6 +798,12 @@ label{
   }
   .tableControl{
     font-size: 14px;
+  }
+  .textDetail{
+        font-size:14px ;
+  }
+  .textDetail2{
+        font-size:12px ;
   }
 }
 </style>
