--- a/result/templates/editScorer.html
+++ b/result/templates/editScorer.html
@@ -39,22 +39,22 @@ alert("{{ message }}");
 <div class="container mt-4 mb-4">
 <table class="table">
   <thead class="table-success">
-    <tr>
-      <th scope="col-2" style="text-align: center;">시간</th>
-      <th scope="col-2" style="text-align: center;">홈팀</th>
-      <th scope="col-2" style="text-align: center;">상대팀</th>
-      <th scope="col-2" style="text-align: center;">장소</th>
+    <tr class="row table-success">
+      <th class="text-center col-md-3 col-7" style="text-align: center;">시간</th>
+      <th class="text-center col-md-3 col-5" style="text-align: center;">홈팀</th>
+      <th class="text-center col-md-3 col-5" style="text-align: center;">상대팀</th>
+      <th class="text-center col-md-3 col-7" style="text-align: center;">장소</th>
 
     </tr>
   </thead>
   <tbody>
-    <tr style="border-bottom:lightslategrey 1px solid;">
+    <tr style="border-bottom:lightslategrey 1px solid;" class="row">
       {% autoescape on %}
-      <td style="text-align: center;"> {{ decidedMatch.timeFrom|date:"Y년 M d일 H:i" }} - {{decidedMatch.timeTo|date:"H:i"}} </td>
+      <td class="text-center col-md-3 col-7" style="text-align: center;"> {{ decidedMatch.timeFrom|date:"Y년 M d일 H:i" }} - {{decidedMatch.timeTo|date:"H:i"}} </td>
       {% endautoescape %}
-      <td style="text-align: center;"> {{ decidedMatch.myTeam }} </td>
-      <td style="text-align: center;"> {{ decidedMatch.vsTeam }} </td>
-      <td style="text-align: center;"> {{ decidedMatch.location }} </td>
+      <td class="text-center col-md-3 col-5" style="text-align: center;"> {{ decidedMatch.myTeam }} </td>
+      <td class="text-center col-md-3 col-5" style="text-align: center;"> {{ decidedMatch.vsTeam }} </td>
+      <td class="text-center col-md-3 col-7" style="text-align: center;"> {{ decidedMatch.location }} </td>
     </tr>
   </tbody>
 </table>
@@ -73,11 +73,11 @@ alert("{{ message }}");
   <div>
     {% for i in score %}
     <div class="form-group row d-flex align-items-center" style="border-bottom: lightslategrey solid 1px; padding-bottom: 10px;">
-      <div class="col-2">
+      <div class="col-md-6 col-6 text-center">
         <label for="scorer{{i}}"><strong>{{i}}번째</strong> 득점선수</label>
       </div>
-      <div class="col-10">
-        <select id="scorer{{i}}" class="form-control col-3" name = "scorer{{i}}" style="margin-bottom: 4px;">
+      <div class="col-md-6 col-6">
+        <select id="scorer{{i}}" class="form-control col-12 col-md-6" name = "scorer{{i}}" style="margin-bottom: 4px;">
             <option selected disabled hidden value="득점선수">득점선수</option>
             <option value="ownGoal">상대팀 자책골</option>
             {% for member in attendedPlayer %}
@@ -91,8 +91,8 @@ alert("{{ message }}");
 
     
   </div>
-  <div class="row float-right">
-    <input class="btn btn-outline-success" type="submit" value="다음">
+  <div class="row justify-content-end" >
+    <input class="btn btn-outline-success mr-3" type="submit" value="다음">
   </div>
 </form>
 </div>
