--- a/result/templates/inputScorer.html
+++ b/result/templates/inputScorer.html
@@ -92,7 +92,7 @@ alert("{{ message }}");
     
   </div>
   <div class="row justify-content-end">
-    <input class="btn btn-outline-success" type="submit" value="다음">
+    <input class="btn btn-outline-success mr-3 mr-md-0" type="submit" value="다음">
   </div>
   
 </form>
