--- a/result/templates/result.html
+++ b/result/templates/result.html
@@ -44,8 +44,8 @@ alert("{{ message }}")
     var prdate = null;
     var year, month, date;
   </script>
-  {% if result %}
-  {% for match in result %}
+  {% if resultList %}
+  {% for match in resultList %}
   <thead>
     <tr class="row">
       {% autoescape on %}
@@ -131,4 +131,27 @@ alert("{{ message }}")
     {% endif %}
 </table>
 </div>
+<hr>
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    {% if resultList.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="?page=1" tabindex="-1" aria-disabled="true">처음으로</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="?page={{resultList.previous_page_number}}" tabindex="-1" aria-disabled="true">{{resultList.previous_page_number}}</a>
+    </li>
+    {% endif %}
+    
+    <li class="page-item disabled"><a class="page-link" href="#">{{resultList.number}}</a></li>
+    {% if resultList.has_next %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{resultList.next_page_number}}">{{resultList.next_page_number}}</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="?page={{resultList.paginator.num_pages}}">마지막으로</a>
+    </li>
+    {% endif %}
+  </ul>
+</nav>
 {% endblock %}
