--- a/match/templates/home.html
+++ b/match/templates/home.html
@@ -51,7 +51,7 @@ alert("{{errormessage}}");
           <div class="col p-3 d-flex flex-column position-static mt-0">
             <div style="border-bottom: rgb(0, 0, 0) 1px solid;" class="row mb-2">
               <div class="col-md-3 col-12">
-                <strong class="d-inline-block mb-2" style="color:white; font-size: 30px; background-color: coral; padding:5px;">공지사항</strong>
+                <strong class="d-inline-block mb-2" style="color:white; font-size: 28px; background-color: coral; padding:5px;">공지사항</strong>
               </div>
               <div class="col-md-9 col-12">
                 <strong class="d-inline-block mb-2 text-info float-left" style="font-size: 30px; padding:5px;">남서울 풋살데이</strong>
@@ -88,7 +88,17 @@ alert("{{errormessage}}");
       <!-- col-6 끝 -->
       <!-- col-6 시작 -->
       <div class="col-md-6 col-12 " style="height: 50%;">
-          <div class="futsalDay row no-gutters border rounded overflow-hidden mb-4 shadow-sm h-md-250 position-relative">
+        <div class="futsalDay row no-gutters border rounded overflow-hidden mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col d-flex flex-column position-static mt-0">
+        <div class="d-none d-md-block p-0">
+          <iframe width="100%" height="330" src="https://www.youtube.com/embed/mBGVwBWDD98" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="d-block d-md-none p-0">
+          <iframe width="100%" height="160" src="https://www.youtube.com/embed/mBGVwBWDD98" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        </div>
+        </div>
+          <!-- <div class="futsalDay row no-gutters border rounded overflow-hidden mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-3 d-flex flex-column position-static mt-0">
               <div style="border-bottom: rgb(0, 0, 0) 1px solid;" class="row mb-2">
                 <div class="col-md-3 col-12">
@@ -124,7 +134,7 @@ alert("{{errormessage}}");
                 {% endif %}
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
         <!-- col-6 끝 -->
         <!-- row 끝 -->
