--- a/account/templates/findPw.html
+++ b/account/templates/findPw.html
@@ -2,7 +2,7 @@
 <html>
         <head>
                 <meta charset="utf-8">
-                <title>FNS Login</title>
+                <title>풋볼러버 비밀번호 찾기</title>
 
                 <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/blog/">
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
