--- a/account/templates/editAccount.html
+++ b/account/templates/editAccount.html
@@ -120,19 +120,19 @@ alert("{{res_data.error}}");
         var url1 = "{% url 'checkId' %}";
         var csrf = $('input[name="csrfmiddlewaretoken"]').last().val();  
         var message = "";
-        $.ajax({
-            url: url1,
-            dataType:'json',
-            type:'POST',
-            async:false,
-            data:{'username':$('#username').val(), 'csrfmiddlewaretoken':'{{ csrf_token }}'},
-            success:function(data){
-                if (data.checkId){
-                    message = "중복된 아이디가 있습니다.";
+        // $.ajax({
+        //     url: url1,
+        //     dataType:'json',
+        //     type:'POST',
+        //     async:false,
+        //     data:{'username':$('#username').val(), 'csrfmiddlewaretoken':'{{ csrf_token }}'},
+        //     success:function(data){
+        //         if (data.checkId){
+        //             message = "중복된 아이디가 있습니다.";
                 
-                }
-            }
-        });
+        //         }
+        //     }
+        // });
         if (message != ""){
             alert(message);
             document.getElementById('username').focus();
