After home editing

--- a/match/templates/home.html
+++ b/match/templates/home.html
@@ -150,7 +150,7 @@ alert("{{errormessage}}");
                   {% if personal_notice %}
                     {{personal_notice.title}}
                   {% else %}
-                    글이 없습니다.
+                    개인매칭 글이 없습니다.
                   {% endif %}
                 </span>
               </h4>
