login and add type of sport

--- a/match/templates/personal_detail.html
+++ b/match/templates/personal_detail.html
@@ -76,7 +76,7 @@ $(document).ready(function(event) {
         <thead>
           <tr class="row">
             <th colspan="2" class="col-12">
-                <strong class="d-inline-block mb-2 text-primary">개인매칭</strong>
+                <strong class="d-inline-block mb-2 text-primary">개인매칭[{{personalMatching.sport}}]</strong>
                 <h1 style="margin-top: 0.5rem"><strong>{{personalMatching.title}}</strong></h1>
             </th>
           </tr>
