--- a/match/templates/recruiting/recruiting_detail.html
+++ b/match/templates/recruiting/recruiting_detail.html
@@ -43,7 +43,7 @@ alert("{{ error }}");
                 <thead>
                   <tr class="row">
                     <th colspan="2" class="col-12">
-                        <strong class="d-inline-block mb-2 text-warning">용병모집</strong>
+                        <strong class="d-inline-block mb-2 text-warning">용병모집[{{recruiting.sport}}]</strong>
                         <h1 style="margin-top: 0.5rem"><strong>{{recruiting.title}}</strong></h1>
                     </th>
                   </tr>
