--- a/match/templates/teamMatching/teamMatching_detail.html
+++ b/match/templates/teamMatching/teamMatching_detail.html
@@ -47,7 +47,7 @@ alert('{{message}}');
           <thead>
             <tr class="row">
               <th colspan="2" class="col-12">
-                  <strong class="d-inline-block mb-2 text-success">팀매칭</strong>
+                  <strong class="d-inline-block mb-2 text-success">팀매칭[{{teamMatching.sport}}]</strong>
                   <h1 style="margin-top: 0.5rem"><strong>{{teamMatching.title}}</strong></h1>
               </th>
             </tr>
