--- a/account/templates/changePw.html
+++ b/account/templates/changePw.html
@@ -1,121 +1,14 @@
-  
+{% load static %}
 <html>
         <head>
-                <meta charset="utf-8">
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">  
                 <title>비밀번호 변경</title>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
-                <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-                <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-                <!-- Bootstrap core CSS -->
-                <link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-            
-                <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-                <link rel="stylesheet" href="/css/jquery-ui.min.css">
-                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker3.min.css">
-                <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.min.js"></script>
-                <script src="/js/bootstrap-datepicker.kr.js" charset="UTF-8"></script>
-              
+
                 <!-- Google Font -->
                 <link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture|Black+Han+Sans|Cute+Font|Do+Hyeon|Dokdo|East+Sea+Dokdo|Gaegu|Gamja+Flower|Gothic+A1|Hi+Melody|Jua|Kirang+Haerang|Nanum+Brush+Script|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Nanum+Pen+Script|Noto+Sans+KR|Noto+Serif+KR|Poor+Story|Single+Day|Song+Myung|Stylish|Sunflower:300|Yeon+Sung&display=swap" rel="stylesheet">
-        <style>
-                *{
-                        margin:0;
-                        padding:0;
-                        text-decoration: none;
-                        box-sizing:border-box;
-                }  
-                p{
-                    font-family: 'Nanum Gothic';
-                }
-                body{
-                        min-height:100vh;
-                        background-image: linear-gradient(120deg, #3498db, #8e44ad);
-                }
-                .login-form{
-                        width:360px;
-                        background: #f1f1f1;
-                        height: 580px;
-                        padding: 80px 40px;
-                        border-radius: 10px;
-                        position:absolute;
-                        left:50%;
-                        top: 50%;
-                        transform:translate(-50%,-50%);
-                }
-                .login-form h1{
-                        text-align: center;
-                        margin-bottom: 60px;
-                }
-    
-                .txtb{
-                        border-bottom: 2px solid #adadad; 
-                        position: relative;
-                        margin: 30px 0;
-                }
-    
-                .txtb input{
-                        font-size:15px;
-                        color:#333;
-                        border:none;
-                        width: 100%;
-                        outline:none;
-                        background:none;
-                        padding:0 5px;
-                        height:40px;
-                }
-    
-                .txtb span::before{
-                        content:attr(data-placeholder);
-                        position:absolute;
-                        top:50%;
-                        left: 5px;
-                        color: #adadad;
-                        transform:translateY(-50%);
-                        z-index:-1;
-                        transition:.5s;
-                }
-    
-                .txtb span::after{
-                        content: '';
-                        position:absolute;
-                        width:100%;
-                        height:2px;
-                        transition: .5s;
-                }
-    
-                .focus + span::after{
-                        top:-5px;
-    
-                }
-                .focus + span::after{
-                        width:100%;
-                }
-    
-                .logbtn{
-                        display:block;
-                        width:100%;
-                        height:50px;
-                        border:none; 
-                        background: linear-gradient(120deg, #3498db, #8e44ad, #3498db);
-                        background-size:200%;
-                        color:#fff;
-                        outline:none;
-                        cursor: pointer;
-                        transition: .5s;
-                }
-    
-                .logbtn:hover{
-                        background-position:right;
-                }
-    
-                .bottom-text{
-                        margin-top:60px;
-                        text-align: center;
-                        font-size:13px;
-                }
-        </style>
+                <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}"/>
+       
         </head>
         <body>
             {% if errormessage %}
@@ -176,11 +69,11 @@ function formCheck(frm){
                         <input type="password" id="re_password" name="re_password" placeholder="비밀번호를 한 번 더 입력해주세요.">
                         <span></span>
                 </div>
-                    {% if error %}
-                    <p style="color: red; font-family: 'Do Hyeon'; text-align: center;">{{error}}</p>
-                    {% endif %}     
+                       
                 <input type="submit" class="logbtn" value="비밀번호 변경">
-                
+                {% if error %}
+                    <p style="color: red; font-family: 'Do Hyeon'; text-align: center;">{{error}}</p>
+                {% endif %}  
                 <div class="bottom-text">
                     <p>
                             <a href="{% url 'findId' %}">아이디 찾기</a>  |
