--- a/account/templates/findPw.html
+++ b/account/templates/findPw.html
@@ -1,18 +1,14 @@
-  
+{% load static %}  
 <html>
         <head>
-                <meta charset="utf-8">
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>풋볼러버 비밀번호 찾기</title>
-
-                <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/blog/">
-                <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-                <!-- Jquery CDN -->
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
                 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
                 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
                 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
                 <!-- Bootstrap core CSS -->
                 <link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
             
@@ -24,158 +20,80 @@
               
                 <!-- Google Font -->
                 <link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture|Black+Han+Sans|Cute+Font|Do+Hyeon|Dokdo|East+Sea+Dokdo|Gaegu|Gamja+Flower|Gothic+A1|Hi+Melody|Jua|Kirang+Haerang|Nanum+Brush+Script|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Nanum+Pen+Script|Noto+Sans+KR|Noto+Serif+KR|Poor+Story|Single+Day|Song+Myung|Stylish|Sunflower:300|Yeon+Sung&display=swap" rel="stylesheet">
-        <style>
-                *{
-                        margin:0;
-                        padding:0;
-                        text-decoration: none;
-                        box-sizing:border-box;
-                }  
-                p{
-                    font-family: 'Nanum Gothic';
-                }
-                body{
-                        min-height:100vh;
-                        background-image: linear-gradient(120deg, #3498db, #8e44ad);
-                }
-                .login-form{
-                        width:360px;
-                        background: #f1f1f1;
-                        height: 580px;
-                        padding: 40px 40px;
-                        border-radius: 10px;
-                        position:absolute;
-                        left:50%;
-                        top: 50%;
-                        transform:translate(-50%,-50%);
-                }
-                .login-form h1{
-                        text-align: center;
-                        margin-bottom: 0px;
-                }
-    
-                .txtb{
-                        border-bottom: 2px solid #adadad; 
-                        position: relative;
-                        margin: 18px 0;
-                        
-                }
-    
-                .txtb input{
-                        font-size:15px;
-                        color:#333;
-                        border:none;
-                        width: 100%;
-                        outline:none;
-                        background:none;
-                        padding:0 5px;
-                        height:40px;
-                }
-    
-                .txtb span::before{
-                        content:attr(data-placeholder);
-                        position:absolute;
-                        top:50%;
-                        left: 5px;
-                        color: #adadad;
-                        transform:translateY(-50%);
-                        z-index:-1;
-                        transition:.5s;
-                }
-    
-                .txtb span::after{
-                        content: '';
-                        position:absolute;
-                        width:100%;
-                        height:2px;
-                        transition: .5s;
-                }
-    
-                .focus + span::after{
-                        top:-5px;
-    
-                }
-                .focus + span::after{
-                        width:100%;
-                }
-    
-                .logbtn{
-                        display:block;
-                        width:100%;
-                        height:50px;
-                        border:none; 
-                        background: linear-gradient(120deg, #3498db, #8e44ad, #3498db);
-                        background-size:200%;
-                        color:#fff;
-                        outline:none;
-                        cursor: pointer;
-                        transition: .5s;
-                }
-    
-                .logbtn:hover{
-                        background-position:right;
-                }
-    
-                .bottom-text{
-                        margin-top:20px;
-                        text-align: center;
-                        font-size:13px;
-                }
-        </style>
-
+                <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}"/>
         </head>
         <body>
-            {% if errormessage %}
-            <script type="text/javascript">
-                    alert("{{errormessage}}");
-            </script>
-            {% endif %}
+        {% if errormessage %}
+        <script type="text/javascript">
+                alert("{{errormessage}}");
+        </script>
+        {% endif %}
                 <form action="{% url 'changePw' %}" onsubmit="return formCheck(this);" method="POST" class="login-form">
                                 {% csrf_token %}
                 <h1 style="font-family: 'Do Hyeon';">비밀번호 찾기</h1>
     
-                <div class = "txtb">
-                        <input type="text" id="username" name="username" placeholder="아이디를 입력해주세요.">
-                        <span></span>
-                </div>
-    
-                <div class = "txtb">
-                        <input type="text" id="phone_number" name="phone_number" maxlength="11" placeholder="휴대폰 번호를 입력해주세요.">
-                        <span></span>
-                </div>
-                <button id="sendSMS" type="button" class="logbtn">인증번호 발송</button>
-                <div class = "txtb">
-                        <input type="text" maxlength="5" name="auth_number" id="auth_number" placeholder="인증번호를 입력해주세요.">
-                        <span></span>
-                </div>
-                <button id="checkSMS" type="button" class="logbtn" style="margin-bottom: 10px;">인증하기</button>
+                        <div class = "txtb">
+                                <input type="text" id="username" name="username" placeholder="아이디를 입력해주세요.">
+                        </div>
+                        <div class = "txtb">
+                                <input type="text" id="phone_number" name="phone_number" maxlength="11" placeholder="휴대폰 번호를 입력해주세요.">
+                        </div>
+                        <button id="sendSMS" type="button" class="logbtn">인증번호 발송</button>
+                        <div class = "txtb">
+                                <input type="text" maxlength="5" name="auth_number" id="auth_number" placeholder="인증번호를 입력해주세요."> <span></span>
+                        </div>
+                        <button id="checkSMS" type="button" class="logbtn" style="margin-bottom: 10px;">인증하기</button>
 
-              
-                <input type="submit" class="logbtn" value="비밀번호 변경">
-                {% if error %}
-                <p style="color: red; font-family: 'Do Hyeon'; text-align: center;">{{error}}</p>
-                {% endif %}     
-                <div class="bottom-text">
-                    <p>
-                            <a href="{% url 'findId' %}">아이디 찾기</a>  |
-                            <a href="{% url 'findPw' %}">비밀번호 찾기</a>
-                    </p>
-                    <p style="margin-top:10px; margin-bottom:10px;"> 회원이 아니신가요? <a href="{% url 'register' %}">회원가입</a></p>
-                    <p><a href="{% url 'home' %}">돌아가기</a></p>
-                       
-                </div>
+                        <input type="submit" class="logbtn" value="비밀번호 변경">
+                        {% if error %}
+                        <p style="color: red; font-family: 'Do Hyeon'; text-align: center;">{{error}}</p>
+                        {% endif %}     
+                        <div class="bottom-text">
+                                <p>
+                                <a href="{% url 'findId' %}">아이디 찾기</a>  |
+                                <a href="{% url 'findPw' %}">비밀번호 찾기</a>
+                                </p>
+                                <p style="margin-top:10px; margin-bottom:10px;"> 회원이 아니신가요? <a href="{% url 'register' %}">회원가입</a></p>
+                                <p><a href="{% url 'home' %}">돌아가기</a></p>
+                        </div>
                 </form>
-        <script type="text/javascript">
-        $(".txtb input").on("focus", function(){
-                $(this).addClass("focus"); 
-        });
-    
-        $(".txtb input").on("blur", function(){
-                if($(this).val()=="")
-                $(this).removeClass("focus"); 
-        });
+<script type="text/javascript">
+//인증문자 보내기 formcheck
+function smsCheck(){
+        var checkSMS = document.getElementById('checkSMS');
+        var sendSMS = document.getElementById('sendSMS');
+        var pwCheck = /^(?=.*[a-zA-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,15}$/; // 비밀번호 검사할 정규식
+        var idCheck = /^[a-zA-Z0-9]{8,15}$/; // 아이디가 적합한지 검사할 정규식
+        var phoneCheck = /^[0-9]{11}$/;
+        var authCheck = /^[0-9]{5}$/;
+        var username = document.getElementById("username");
+        var phone_number = document.getElementById("phone_number");
+        var auth_number = document.getElementById("auth_number");
+
+        if(username.value == ""){
+                alert("아이디를 입력해주세요.");
+                username.focus();
+                return false;
+        }
+        if(phone_number.value == ""){
+                alert("휴대폰 번호를 입력해주세요");
+                phone_number.focus();
+                return false;
+        }
+        if(!(check(phoneCheck, phone_number, "휴대폰번호는 '-'없이 11자리를 적어주세요"))){
+                phone_number.focus();
+                return false;
+        }
+        return true;
+}
+
+
 
 $('#sendSMS').click( function() {
+        if(!(smsCheck())){
+                return false;
+        }
+        
         url1 = "{% url 'verification' %}";
         var csrf = $('input[name="csrfmiddlewaretoken"]').first().val();  
         var findPw = 'findPw';
@@ -292,7 +210,7 @@ function formCheck(frm){
                 alert('인증을 해주세요.');
                 return false;
         }
-        }
+}
         </script>
         </body>
 </html>
