--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -1,186 +1,56 @@
-  
+
+
+<!DOCTYPE html>
+{% load static %}
 <html>
-    <head>
-            <meta charset="utf-8">
-            <title>풋볼러버 Login</title>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-            <!-- Bootstrap core CSS -->
-            <link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        
-            <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-            <link rel="stylesheet" href="/css/jquery-ui.min.css">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker3.min.css">
-            <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.min.js"></script>
-            <script src="/js/bootstrap-datepicker.kr.js" charset="UTF-8"></script>
-          
-            <!-- Google Font -->
-            <link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture|Black+Han+Sans|Cute+Font|Do+Hyeon|Dokdo|East+Sea+Dokdo|Gaegu|Gamja+Flower|Gothic+A1|Hi+Melody|Jua|Kirang+Haerang|Nanum+Brush+Script|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Nanum+Pen+Script|Noto+Sans+KR|Noto+Serif+KR|Poor+Story|Single+Day|Song+Myung|Stylish|Sunflower:300|Yeon+Sung&display=swap" rel="stylesheet">
-    <style>
-            *{
-                    margin:0;
-                    padding:0;
-                    text-decoration: none;
-                    box-sizing:border-box;
-            }  
-            p{
-                    font-family: 'Nanum Gothic';
-            }
-            body{
-                    min-height:100vh;
-                    background-image: linear-gradient(120deg, #3498db, #8e44ad);
-            }
-            .login-form{
-                    width:360px;
-                    background: #f1f1f1;
-                    height: 580px;
-                    padding: 80px 40px;
-                    border-radius: 10px;
-                    position:absolute;
-                    left:50%;
-                    top: 50%;
-                    transform:translate(-50%,-50%);
-            }
-            .login-form h1{
-                    text-align: center;
-                    margin-bottom: 60px;
-            }
+<head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>풋볼러버 로그인</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}"/>
+        <!-- Google Font -->
+        <link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture|Black+Han+Sans|Cute+Font|Do+Hyeon|Dokdo|East+Sea+Dokdo|Gaegu|Gamja+Flower|Gothic+A1|Hi+Melody|Jua|Kirang+Haerang|Nanum+Brush+Script|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Nanum+Pen+Script|Noto+Sans+KR|Noto+Serif+KR|Poor+Story|Single+Day|Song+Myung|Stylish|Sunflower:300|Yeon+Sung&display=swap" rel="stylesheet">
 
-            .txtb{
-                    border-bottom: 2px solid #adadad; 
-                    position: relative;
-                    margin: 30px 0;
-            }
 
-            .txtb input{
-                    font-size:15px;
-                    color:#333;
-                    border:none;
-                    width: 100%;
-                    outline:none;
-                    background:none;
-                    padding:0 5px;
-                    height:40px;
-            }
-
-            .txtb span::before{
-                    content:attr(data-placeholder);
-                    position:absolute;
-                    top:50%;
-                    left: 5px;
-                    color: #adadad;
-                    transform:translateY(-50%);
-                    z-index:-1;
-                    transition:.5s;
-            }
-
-            .txtb span::after{
-                    content: '';
-                    position:absolute;
-                    width:100%;
-                    height:2px;
-                    transition: .5s;
-            }
-
-            .focus + span::after{
-                    top:-5px;
-
-            }
-            .focus + span::after{
-                    width:100%;
-            }
-
-            .logbtn{
-                    display:block;
-                    width:100%;
-                    height:50px;
-                    border:none; 
-                    background: linear-gradient(120deg, #3498db, #8e44ad, #3498db);
-                    background-size:200%;
-                    color:#fff;
-                    outline:none;
-                    cursor: pointer;
-                    transition: .5s;
-            }
-
-            .logbtn:hover{
-                    background-position:right;
-            }
-
-            .bottom-text{
-                    margin-top:60px;
-                    text-align: center;
-                    font-size:13px;
-            }
-
-        @media all and (max-width: 600px){
-                body{
-                }
-                .login-form{
-                    width:800px;
-                    background: #f1f1f1;
-                    height: 1000px;
-                    padding: 80px 40px;
-                    border-radius: 10px;
-                    position:absolute;
-                    transform:translate(-50%,-50%);
-                }
-        }
-</style>
 </head>
 <body>
-        {% if errormessage %}
-        <script type="text/javascript">
-                alert("{{errormessage}}");
-        </script>
-        {% endif %}
-        {% if pwSuccess %}
-        <script type="text/javascript">
-                alert("{{pwSuccess}}");
-        </script>
-        {% endif %}
-            <form action="{% url 'login' %}" method="POST" class="login-form">
-                            {% csrf_token %}
-            <h1 style="font-family: 'Do Hyeon';">풋볼러버 로그인</h1>
+  {% if errormessage %}
+  <script type="text/javascript">
+          alert("{{errormessage}}");
+  </script>
+  {% endif %}
+  {% if pwSuccess %}
+  <script type="text/javascript">
+          alert("{{pwSuccess}}");
+  </script>
+  {% endif %}
+      <form action="{% url 'login' %}" method="POST" class="login-form">
+                      {% csrf_token %}
+      <h4 style="font-family: 'Nanum Gothic';">풋볼러버에 로그인하세요.</h4>
 
-            <div class = "txtb">
-                    <input type="text" name="username" placeholder="아이디">
-                    <span></span>
-            </div>
+      <div class = "txtb">
+              <input type="text" name="username" placeholder="ID">
+              <span></span>
+      </div>
 
-            <div class = "txtb">
-                    <input type="password" name="password" placeholder="비밀번호">
-                    <span></span>
-            </div>
-                {% if error %}
+      <div class = "txtb">
+              <input type="password" name="password" placeholder="PASSWORD">
+              <span></span>
+      </div>  
+      <input type="submit" class="logbtn" value="Login">
+        {% if error %}
                 <p style="color: red; font-family: 'Do Hyeon'; text-align: center;">{{error}}</p>
-                {% endif %}     
-            <input type="submit" class="logbtn" value="Login">
-            
-            <div class="bottom-text">
-                <p>
-                        <a href="{% url 'findId' %}">아이디 찾기</a>  |
-                        <a href="{% url 'findPw' %}">비밀번호 찾기</a>
-                </p>
-                   <p style="margin-top:10px; margin-bottom:10px;"> 회원이 아니신가요? <a href="{% url 'register' %}">회원가입</a></p>
-                   <p><a href="{% url 'home' %}">돌아가기</a></p>
-                   
-            </div>
-            </form>
-    <script type="text/javascript">
-    $(".txtb input").on("focus", function(){
-            $(this).addClass("focus"); 
-    });
-
-    $(".txtb input").on("blur", function(){
-            if($(this).val()=="")
-            $(this).removeClass("focus"); 
-    });
-    </script>
-    </body>
+        {% endif %}  
+      <div class="bottom-text">
+          <p>
+                  <a href="{% url 'findId' %}" style="font-family: 'Nanum Gothic';">아이디 찾기</a>  |
+                  <a href="{% url 'findPw' %}">비밀번호 찾기</a>
+          </p>
+             <p style="margin-top:10px; margin-bottom:10px;"> 회원이 아니신가요? <a href="{% url 'register' %}">회원가입</a></p>
+             <p><a href="{% url 'home' %}">돌아가기</a></p>
+             
+      </div>
+</form>
+</body>
 </html>
-
 
