--- a/match/templates/recruiting/recruiting_new.html
+++ b/match/templates/recruiting/recruiting_new.html
@@ -28,6 +28,11 @@ alert("{{errormessage}}");
             //         frm.vs_team.focus();
             //         return false;
             //     }
+                if(frm.sport.value == "스포츠를 선택하세요."){
+                   alert("스포츠를 선택해주세요");
+                   frm.sport.focus();
+                   return false;
+               }
                if(frm.location.value == "장소를 선택하세요."){
                    alert("장소를 선택해주세요");
                    frm.location.focus();
@@ -135,6 +140,17 @@ alert("{{errormessage}}");
                 <option value="{{team.id}}">{{team}}</option>
                 {% endfor %}
                 <option value="친선경기">친선경기</option>
+            </select>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-lg-2 col-sm-12 col-form-label" for="sport">스포츠</label>
+            <div class="col-lg-10 col-sm-12">
+            <select class="form-control" id="sport" name="sport">
+                <option selected disabled hidden>스포츠를 선택하세요.</option>
+                <option value="Futsal">풋살</option>
+                <option value="Football">축구</option>
+                <option value="Basketball">농구</option>
             </select>
             </div>
         </div>
