--- a/account/templates/findId.html
+++ b/account/templates/findId.html
@@ -7,7 +7,7 @@
             
                 <!-- Google Font -->
                 <link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture|Black+Han+Sans|Cute+Font|Do+Hyeon|Dokdo|East+Sea+Dokdo|Gaegu|Gamja+Flower|Gothic+A1|Hi+Melody|Jua|Kirang+Haerang|Nanum+Brush+Script|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Nanum+Pen+Script|Noto+Sans+KR|Noto+Serif+KR|Poor+Story|Single+Day|Song+Myung|Stylish|Sunflower:300|Yeon+Sung&display=swap" rel="stylesheet">
-                <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}"/>
+                <link rel="stylesheet" type="text/css" href="{% static 'account/css/login.css' %}"/>
    
         </head>
         <body>
