--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>풋볼러버 로그인</title>
-        <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}"/>
+        <link rel="stylesheet" type="text/css" href="{% static 'account/css/login.css' %}"/>
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture|Black+Han+Sans|Cute+Font|Do+Hyeon|Dokdo|East+Sea+Dokdo|Gaegu|Gamja+Flower|Gothic+A1|Hi+Melody|Jua|Kirang+Haerang|Nanum+Brush+Script|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Nanum+Pen+Script|Noto+Sans+KR|Noto+Serif+KR|Poor+Story|Single+Day|Song+Myung|Stylish|Sunflower:300|Yeon+Sung&display=swap" rel="stylesheet">
 
@@ -42,10 +42,12 @@
                 <p style="color: red; font-family: 'Do Hyeon'; text-align: center;">{{error}}</p>
         {% endif %}  
       <div class="bottom-text">
-          <p>
-                  <a href="{% url 'findId' %}" style="font-family: 'Nanum Gothic';">아이디 찾기</a>  |
-                  <a href="{% url 'findPw' %}">비밀번호 찾기</a>
-          </p>
+                <input type="checkbox" class="autolog" id="autolog" name="autolog" value="true">
+                <span>자동로그인</span>
+                <p>
+                        <a href="{% url 'findId' %}" style="font-family: 'Nanum Gothic';">아이디 찾기</a>  |
+                        <a href="{% url 'findPw' %}">비밀번호 찾기</a>
+                </p>
              <p style="margin-top:10px; margin-bottom:10px;"> 회원이 아니신가요? <a href="{% url 'register' %}">회원가입</a></p>
              <p><a href="{% url 'home' %}">돌아가기</a></p>
              
