--- a/reservation/templates/reservation/playground.html
+++ b/reservation/templates/reservation/playground.html
@@ -48,9 +48,9 @@
             {% endif %}
 
         </div>
-        <div class="info2">
+        <!-- <div class="info2">
             <p>규격</p>
-        </div>
+        </div> -->
         <div class="info3">
             <p>편의시설</p>
             <div>
@@ -69,7 +69,7 @@
                     <i class="material-icons">
                         sports_soccer
                     </i>
-                    <p>공대여</p>
+                    <p>조끼제공</p>
                 </div>
                 {% endif %}
 
@@ -78,7 +78,7 @@
                     <i class="material-icons">
                         sports_soccer
                     </i>
-                    <p>공대여</p>
+                    <p>풋살화대여</p>
                 </div>
                 {% endif %}
 
@@ -87,7 +87,7 @@
                     <i class="material-icons">
                         sports_soccer
                     </i>
-                    <p>공대여</p>
+                    <p>샤워가능</p>
                 </div>
                 {% endif %}
 
@@ -96,16 +96,7 @@
                     <i class="material-icons">
                         sports_soccer
                     </i>
-                    <p>공대여</p>
-                </div>
-                {% endif %}
-
-                {% if playground.playgroundOption6 == 1 %}
-                <div class="options">
-                    <i class="material-icons">
-                        sports_soccer
-                    </i>
-                    <p>공대여</p>
+                    <p>음료수구매</p>
                 </div>
                 {% endif %}
 
