--- a/reservation/templates/reservation/resultReservation.html
+++ b/reservation/templates/reservation/resultReservation.html
@@ -109,7 +109,7 @@
 </style>
 
 
-<div id="reservation_result">
+<div class="common_area" style="max-width:720px; margin:100px auto;">
 
     <div class="checkBtn">
         <p>예매내용 확인</p>
