--- a/reservation/templates/reservation/tryReservation.html
+++ b/reservation/templates/reservation/tryReservation.html
@@ -40,6 +40,16 @@
                 <p class="subTile">총 결제금액</p>
                 <p class="subValue">{{totalPrice}} 원</p>
             </div>
+
+            <br>
+
+            <p class="headTitle">환불규정</p>
+            <div
+                style="height:auto; font-size:12px; background-color:#EEEEEE; margin-top: -10px; border-top: 2px solid black; padding-top:10px; line-height:1.1em;">
+                <p>사용7일전 취소 : 100퍼센트 반환</p>
+                <p>사용7일미만 취소 : 50퍼센트 반환</p>
+                <p>사용당일인 경우 반환하지 아니한다.</p>
+            </div>
         </div>
 
         <form action="{% url 'resultReservation' %}?id={{playground.id}}" method="POST">
