--- a/FNSProject/templates/footer.html
+++ b/FNSProject/templates/footer.html
@@ -1,16 +1,58 @@
 {% load static %}
-<footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-12">
-            <a href="#"><img src="{% static 'KoreanLogo.png' %}" alt="logo" class="src mr-4" width="170px"></a>
+<footer class="footer" style="padding:0px;">
+  <p class="footerPolicy">
+    <span>
+      <a href="{% url 'servicePolicy' %}" style="text-decoration: none; color: white;">
+        이용약관
+      </a>
+    </span> |
+    <span>
+      <a href="{% url 'informationPolicy' %}" style="text-decoration: none; color: white;">
+        개인정보처리방침
+      </a>
+    </span>
+  </p>
+  <hr color="gray">
+    <div class="footerText">
+      <div>
+        <p><b>본 홈페이지는 풋볼러버에 의해서 개발 및 관리하고 있습니다.</b></p>
+        <p>문의 | fbloverofficial@gmail.com | Tel. 070-7913-0113</p>
+        <p>상호명 | 풋볼러버 Football Lover | 사업자번호 | 419-25-00866 | 대표 : 양준석 </p>
+        <p>[우:31020] 충청남도 천안시 서북구 성환읍 대학로 91 창업동아리관 4층 4204호(남서울대학교)</p>
+        <p>
+          <b>
+            사이트내에서 결제되는 서비스에 대하여 환불 민원 이슈 등은 풋볼러버에서 처리하며
+            모든 책임은 풋볼러버에 있습니다. <br>민원 담당자 연락처: 양준석 | Tel. O7O-7913-0113
+          </b>
+        </p>
+      </div>
+      <div class = "pcFooterLogo">
+        <img src="{% static 'VerticalLogo_white.png' %}" alt="logo" width="150px">
+        <div style="text-align: center; margin-top: 20px;">
+          <a href="https://www.facebook.com/koreanfootballlover/" style="text-decoration: none; color:white;">
+            <i class="fab fa-facebook-square fa-2x" style="margin-right: 5px;"></i>
+          </a>  
+          <a href="https://www.instagram.com/fblover_official/" style="text-decoration: none; color:white;">
+            <i class="fab fa-instagram fa-2x" style="margin-right: 5px;"></i>
+          </a>
+          <a href="https://www.youtube.com/c/footballloverofficial" style="text-decoration: none; color:white;">
+            <i class="fab fa-youtube fa-2x"></i>
+          </a>
         </div>
-        <div class="col-md-9 col-12">
-            <p><b>본 홈페이지는 풋볼러버에 의해서 개발 및 관리하고 있습니다.</b></p>
-            <p>문의 | fbloverofficial@gmail.com | Tel. 070-7913-0113</p>
-            <p>상호명 | 풋볼러버 Football Lover | 사업자번호 | 419-25-00866 | 대표 : 양준석 </p>
-            <p>[우:31020] 충청남도 천안시 서북구 성환읍 대학로 91 창업동아리관 4층 4204호(남서울대학교)</p>
-        </div>
+      </div>
+    </div>
+    <div class = "mobileFooterLogo">
+      <img src="{% static 'VerticalLogo_white.png' %}" alt="logo" width="100px">
+      <div style="text-align: center; margin-left:30px; margin-top: 10px;">
+        <a href="https://www.facebook.com/koreanfootballlover/" style="text-decoration: none; color:white;">
+          <i class="fab fa-facebook-square fa-2x" style="margin-right: 5px;"></i>
+        </a>  
+        <a href="https://www.instagram.com/fblover_official/" style="text-decoration: none; color:white;">
+          <i class="fab fa-instagram fa-2x" style="margin-right: 5px;"></i>
+        </a>
+        <a href="https://www.youtube.com/c/footballloverofficial" style="text-decoration: none; color:white;">
+          <i class="fab fa-youtube fa-2x"></i>
+        </a>
       </div>
     </div>
       
