--- a/FNSProject/templates/navbar.html
+++ b/FNSProject/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top mx-0 px-0 pl-md-3">
   
-    <a href="{% url 'home' %}"><img src="{% static 'KoreanLogo.png' %}" alt="logo" 
+    <a href="{% url 'home' %}"><img src="{% static 'HorizontalLogo.png' %}" alt="logo" 
     class="src mr-5" height="50px" width="160px" class="mr-4"></a>
   
     <div class="text-muted mr-md-5 d-block d-md-none">
