--- a/match/templates/personal_detail.html
+++ b/match/templates/personal_detail.html
@@ -178,12 +178,52 @@ $(document).ready(function(event) {
       
     </div>
 
+    <script>
+      // 댓글입력창 기능
+      // 댓글 수정시 글에 맞게 높이 조정
+      $(document).ready(function() {
+        $('.commentBox').on( 'change keydown paste cut delete', 'textarea', function (e){
+          $(this).css('height', 'auto' ); 
+          $(this).height( this.scrollHeight );
+        });
 
+        // focus 시 버튼 파란색으로
+        $('.commentBox').find('textarea').on('focus', function(e){
+          $('#commentBtn').css("background-color", "#005CCF");
+        });
+        // blur시 높이 30px로
+        $('.commentBox').on( 'blur', 'textarea', function (e){
+          $(this).height('30px');
+          $('#commentBtn').css("background-color", "gray");
+        });
+
+        $('.commentBox').find( 'textarea' ).keyup();
+
+        //댓글수정창 기능
+        // 높이 맞추기
+        $('.commentEditBox').on( 'change keydown paste cut delete', 'textarea', function (e){
+          $(this).css('height', 'auto' ); 
+          $(this).height( this.scrollHeight );
+        });
+        // 버튼색 focus시 파란색으로 바꾸기
+        $('.commentEditBox').find('textarea').on('focus', function(e){
+          $('#commentEditBtn').css("background-color", "#005CCF");
+        });
+        // 버튼색 blur 시 회색으로
+        $('.commentEditBox').on( 'blur', 'textarea', function (e){
+          $(this).height('30px');
+          $('#commentEditBtn').css("background-color", "gray");
+        });
+
+        $('.commentEditBox').find( 'textarea' ).keyup();
+
+        
+        
+      });
+    </script>
   <!-- 댓글 등록하기 -->
   <hr>
   <h4>댓글 {{personalMatching.total_comment}}개</h4>
-  <div class="container" style="margin:0;">
-    <div class="row">
     {% if commenterror %}
       <ul>
       {% for error in commenterror %}
@@ -191,60 +231,96 @@ $(document).ready(function(event) {
       {% endfor %}
       </ul>
     {% endif %}
-      <div class="col-1">
-        <img style="border-radius: 70px;" width="40px" height="40px" src="{{ fnsuser.userimg.url }}">
-      </div>
-      <div class="d-block d-lg-none d-md-none" style="margin-left: 30px; padding-top: 8px;">
-        <span><strong>{{fnsuser.name}}</strong></span>
-      </div>
-      <div class="col-lg-9 col-sm-12">
-      <form method="post" action="{% url 'personalcm_write' %}" enctype="multipart/form-data">
+      <div class="commentBox">
+        <form method="post" action="{% url 'personalcm_write' %}" enctype="multipart/form-data">
         {% csrf_token %}
-        <input type="hidden" name="personalMatching_id" value="{{ personalMatching.id }}">
-        <div class="form-group">
-          <textarea class="form-control" name="content" rows="1" placeholder="댓글을 입력하세요"></textarea>
-        </div>
+          <img class="commentImg" style= "border-radius: 70px;" width="35px" height="35px" src="{{ fnsuser.userimg.url }}">
+          <input type="hidden" name="personalMatching_id" value="{{ personalMatching.id }}">
+          <textarea id= "cmContent" name="content" placeholder="댓글을 입력하세요"></textarea>
       </div>
-        <div class="col-lg-2 col-sm-12 col-md-12">
-          <div class="form-group float-right">
-            <button type="submit" class="btn btn-outline-primary">등록</button>
-            <button type="reset" style="margin-right: 5px;" class="btn btn-outline-primary">취소</button>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
+      <div class="commentBtnWrapper">
+        <button type="reset" style="margin-right: 5px; background-color: white; color: black;" class="commentBtn">취소</button>
+        <button type="submit" class="commentBtn" id="commentBtn">댓글</button>
+      </div>
+        </form>
+    
   <hr style="margin-top:0;">
 
   <!-- 댓글 목록 -->
   <div class="container">
+    <script>
+      var i = 0;
+    </script>
     {% for comment in commentList %}
+    <script>
+      i += 1;
+    </script>
     <!-- 댓글 대댓글 전체 래핑 -->
     <div class="commentWrapper">
       <!-- 댓글 래퍼 -->
       <div class="wrapper">
         <!-- 상세 댓글 -->
-        <div class="row detail">
-          <div class="col-sm-1 col-2">
+        <div class="detail">
+          <div>
             <a href="{% url 'myPage' comment.user.id %}">
-            <img class="float-right" style="margin-left:10px; border-radius: 70px;" width="35px" height="35px" src="{{ comment.user.userimg.url }}">
+              <img class="float-right" style="margin-left:10px; border-radius: 70px;" width="35px" height="35px" src="{{ comment.user.userimg.url }}">
             </a>
           </div>
-          <div id = "{{comment.id}}" class="col-sm-10 col-8">
+          <div id = "{{comment.id}}" class="comment">
             <h6 class="media-heading user_name">
-            <strong>{{ comment.user }}</strong> 
-            | {{comment.passedTime}}
+              <strong class="commentName">{{ comment.user }}</strong> 
+              <span class="commentTime">| {{comment.passedTime}}</span>
             </h6>
-            <h6>{{ comment.content }}</h6>
+            <h5 style="display: block;" id = "{{comment.passedTime}}" class="commentContent">{{ comment.content }}</h5>
+            <!-- {% if comment %}
+            <script type = "text/javascript">
+              var content = "{{comment.content}}";
+              var comment = document.getElementById('{{comment.passedTime}}');
+              var commentWidth = comment.scrollWidth;
+              var commentBox = document.getElementById('{{comment.id}}');
+              var boxWidth = (commentBox.clientWidth + 1);
+              var contentArray = content.split("");
+              if (commentWidth >= boxWidth){
+                alert("commentWidth : "+ commentWidth + "\n boxWidth : "+ boxWidth + "길어요!!");
+                comment.style.display = "none";
+                var newText = document.createElement("h5");
+                var j = 1;
+                for(var i = 0; i < contentArray.length; i++){
+                  var text = document.createTextNode(contentArray[i]);
+                  
+                  if(newText.scrollWidth <= (boxWidth-60)){
+                    
+                    newText.appendChild(text);
+                    commentBox.appendChild(newText);
+                  }
+                  else{
+                    newText.innerHTML += "<br>";
+                    newText = document.createElement("span");
+
+                    j += 1;
+                    newText.appendChild(text);
+                    commentBox.appendChild(newText);
+                    
+                  }
+                }
+                
+              };
+            </script>
+            {% endif %} -->
           </div>
-          <div class="btn-group col-sm-1 col-2" style="z-index: 1000;">
-            <button type="button" class="btn btn-light dropdown-toggle" style="color:white !important; border:none !important; background-color: white !important;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="far fa-caret-square-down" style="color: black !important;"></i>
+          <div class="commentDropDown">
+            <button type="button" class="commentDropBtn"> 
+            <i class="fas fa-ellipsis-v"></i>
             </button>
-            <div class="dropdown-menu dropdown-menu-right">
+            <div class="cmDropDownContent" style="z-index: 100;">
               {% if comment.user == fnsuser %}
                 <button class="dropdown-item edit" type="button">수정</button>
-                <a href ="{% url 'deletePC' comment.id%}" onclick="return deletePC()"><button class="dropdown-item" type="button" id="deletePC">삭제</button></a>
+                <button class="dropdown-item" type="button" id="deletePC">
+                <a href ="{% url 'deletePC' comment.id%}" onclick="return deletePC()"
+                style="text-align: center; padding-top:5px; padding-bottom: 5px; background:none;">
+                  삭제
+                </a>
+              </button>
               {% endif %}
               {% if comment.reply.all.count == 0 %}
               <button class="dropdown-item reply" type="button">답글 달기</button>
@@ -258,25 +334,19 @@ $(document).ready(function(event) {
         <!-- 상세 댓글 끝 -->
 
         <!-- 댓글 수정 폼 -->
-        <div class="row editForm">
-          <div class="col-sm-1 col-2">
-            <img class="float-right" style="border-radius: 70px;" width="40px" height="40px" src="{{ comment.user.userimg.url }}">
-          </div>
-          <div id = "{{comment.id}}" class="col-sm-9 col-10">
-            <form method="post" action="{% url 'editPC' comment.id %}" enctype="multipart/form-data" class="col-lg-12 col-md-10">
+        <div class="editForm">
+          <div class="commentEditBox">
+            <form method="post" action="{% url 'editPC' comment.id %}" enctype="multipart/form-data">
             {% csrf_token %}
+              <img class="commentImg" style= "border-radius: 70px;" width="35px" height="35px" src="{{ fnsuser.userimg.url }}">
               <input type="hidden" name="personalMatching_id" value="{{ personalMatching.id }}">
-              <div class="form-group row">
-                <textarea class="form-control" name="content" rows="1" placeholder="댓글을 수정하세요"></textarea>
-              </div>
+              <textarea name="content" placeholder="댓글을 수정하세요"></textarea>
+            <div class="commentBtnWrapper">
+              <button type="reset" style="margin-right: 5px; background-color: white; color: black;" class="commentBtn cancel">취소</button>
+              <button type="submit" class="commentBtn" id="commentEditBtn">수정</button>
             </div>
-            <div class="col-sm-2 col-12">
-              <div class="form-group float-right">
-                <button type="submit" class="btn btn-outline-primary">수정</button>
-                <button type="button" style="margin-right: 5px;" class="btn btn-outline-primary cancel">취소</button>
-              </div>
             </form>
-          </div> 
+          </div>
         </div>
         <!-- 댓글수정폼 끝 -->
       <hr style="margin-top:0.5rem;">
@@ -426,7 +496,7 @@ $('.edit').click(function(){
 })
 
 $('.cancel').click(function(){
-  $(this).parent().parent().parent().parent().removeClass("editToggle");
+  $(this).parent().parent().parent().parent().parent().removeClass("editToggle");
 })
 
 $('.replyEdit').click(function(){
