--- a/reservation/templates/reservation/playground_list.html
+++ b/reservation/templates/reservation/playground_list.html
@@ -13,14 +13,15 @@
     </div>
 
     <div class="location">
-        <p class="">지역</p>
-        <div>
+        <p class="" style="width:10%; line-height:1.8em;">지역</p>
+        <div style="width:70%;">
             <input type="text" placeholder="구장을 검색하세요!">
         </div>
-    </div>
 
-    <div class="searchBtn">
-        검색하기
+        <div class="searchBtn">
+            검색하기
+        </div>
+
     </div>
 
     {% for playground in playgrounds %}
